--- a/package.json
+++ b/package.json
@@ -5,15 +5,9 @@
   "main": "index.js",
   "browser": "browser.js",
   "dependencies": {
-    "level-live-stream": "~1.4.9",
+    "level-livefeed": "~0.1.3",
     "multilevel": "~5.5.0",
     "inherits": "~2.0.1"
-  },
-  "devDependencies": {
-    "tape": "~2.3.2"
-  },
-  "scripts": {
-    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
